# fixed-bigint

./: .gitignore  CMakeLists.txt  README.md  repomix-output.xml
.github/workflows/: ci.yml
examples/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/fbi/: fixed_bigint.hpp
lib/: number.cpp  number.h
tests/: CMakeLists.txt  arithmetic_tests.cpp  output_tests.cpp  test_fixed_bigint.cpp
